# pico-ps3-charger

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pico_sdk_import.cmake  tusb_config.h
.github/ISSUE_TEMPLATE/: bug_report.md
enclosure/: ENCLOSURE.md
src/: main.c  usb_host.c  usb_host.h
